Correct alignment issue on account page

--- a/css/main.css
+++ b/css/main.css
@@ -1094,7 +1094,6 @@ nav.menu-nav-container ul li.menu-nav-link.active a, nav.menu-nav-container ul l
   width: 100vw;
 }
 #account-page main {
-  margin: 0 auto;
   padding: 3em 2em;
   max-width: 100vw;
 }
