--- a/scss/account-page.scss
+++ b/scss/account-page.scss
@@ -11,7 +11,6 @@
     width: 100vw;
   }
   main {
-    margin: 0 auto;
     padding: 3em 2em;
     max-width:100vw;
     nav {
